--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row flex-row wrap">
         <div class="bucket img1-t2 center done">수익사업 아이디어 발굴</div>
         <div class="bucket img2 center done">주 3회 이상 조깅, 근력 운동하기</div>
-        <div class="bucket img2 center">월 1권 이상 독서하기</div>
+        <div class="bucket img2 center done">월 1권 이상 독서하기</div>
         <div class="bucket img1-t2 center">주 1회 이상 클래식 기타 연습하기</div>
         <div class="bucket img1-t2 center">주식 수익률 5% 이상 달성하기</div>
         <div class="bucket img2 center">발명 아이디어 2건 이상 발굴하기</div>
