--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p class="subtitle">[ 90% 이상 목표 달성 ]</p>
     <div class="row flex-row wrap">
         <div class="bucket img1 center">사업 아이디어 발굴</div>
-        <div class="bucket img2 center">주 3회 이상 조깅, 근력 운동하기</div>
+        <div class="bucket img2 center">주 3회 이상 조깅/근력 운동하기</div>
         <div class="bucket img2 center">월 1권 이상 독서하기</div>
         <div class="bucket img1 center">주 1회 이상 클래식 기타 연습하기</div>
         <div class="bucket img1 center">주식 수익률 5% 이상 달성하기</div>
