--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body class="bg center">
     <h1 class="title">2023 New Year Plan</h1>
     <p class="subtitle">[ 90% 이상 목표 달성 ]</p>
-    <div class="row wrap">
+    <div class="row flex-row">
         <div class="bucket img1-t2 center">사업 아이디어 발굴</div>
         <div class="bucket img2 center">주 3회 이상 조깅/근력 운동하기</div>
         <div class="bucket img2 center">월 1권 이상 독서하기</div>
