--- a/index.html
+++ b/index.html
@@ -1,106 +1,86 @@
-<!DOCTYPE html>
-<!-- saved from url=(0032)http://127.0.0.1:5500/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023 Bucket List</title>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>나만의 중고마켓</title>
+    <link rel="stylesheet"
+        href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&family=Nanum+Pen+Script&display=swap');
-
-        * {
-            font-family: 'Hahmlet', serif;
-        }
-
-        .title {
-            color: white;
-            background-color: blue;
-            font-size: 30px;
-            padding:10px 20px;
-            border-radius: 10px;
-        }
-
-        .bg {
-            width: 440px;
-            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
-        }
-
-        .subtitle {
-            color: blue;
-            font-weight: bold;
-            font-size: 20px;
-        }
-
-        .bucket {
-            width: 200px;
-            height: 160px;
-        }
-
-        .img1 {
-            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
-	    background-size: cover;
-            background-position: center;
-        }
-
-        .img2 {
-            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /* 꾸미기 */
     </style>
-    <link rel="stylesheet" type="text/css" href="./index_files/sparta-bucket2.css">
 </head>
+<style>
+    .hero {
+        margin-bottom: 2rem;
+    }
 
-<body class="bg center">
-    <h1 class="title">2023 New Year Plan</h1>
-    <p class="subtitle">[ 90% 이상 목표 달성 ]</p>
-    <div class="row flex-row wrap">
-        <div class="bucket img1 center">사업 아이디어 발굴</div>
-        <div class="bucket img2-t2 center">주 3회 이상 조깅/근력 운동하기</div>
-        <div class="bucket img2-t2 center">월 1권 이상 독서하기</div>
-        <div class="bucket img1 center">주 1회 이상 클래식 기타 연습하기</div>
-        <div class="bucket img1 center">주식 수익률 5% 이상 달성하기</div>
-        <div class="bucket img2-t2 center">발명 아이디어 2건 이상 발굴하기</div>
+    .card:hover {
+        transform: scale(1.2);
+        transition: all 1.0s ease;
+    }
+</style>
+
+<body>
+    <div class="hero bg-dark text-center py-5">
+        <h1 class="text-white">나만의 르탄마켓</h1>
+        <h2 class="text-white">집에 있는 물건을 팝니다!</h2>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?rice-cooker" class="card-img-top" alt="전기밥솥">
+                    <div class="card-body">
+                        <h5 class="card-title">전기밥솥</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">5만원</h6>
+                        <p class="card-text">한 번 밖에 안쓴 전기밥솥 팝니다. 부모님이 독립 할 때 주신 거에요!</p>
+                        <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?chair" class="card-img-top" alt="의자">
+                    <div class="card-body">
+                        <h5 class="card-title">의자</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">1만원</h6>
+                        <p class="card-text">사무실에서 사용한 의자 팝니다. 조절 가능한 팔걸이가 달려있어요.</p>
+                        <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?laptop" class="card-img-top" alt="노트북">
+                    <div class="card-body">
+                        <h5 class="card-title">노트북</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">30만원</h6>
+                        <p class="card-text">삼성 노트북 판매합니다. 사용기간은 1년 정도이며, 상태는 깨끗합니다.</p>
+                        <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/chatGPT/%EC%B2%AD%EC%86%8C%EA%B8%B0.jpeg" class="card-img-top" alt="청소기">
+                    <div class="card-body">
+                        <h5 class="card-title">청소기</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">25만원</h6>
+                        <p class="card-text">흡입력이 좋은 청소기 판매합니다. 사용기간은 1년 정도이며, 상태는 깨끗합니다.</p>
+                        <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-<!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
+</body>
 
-
-</body></html>
+</html>
